--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="theme-color" content="#5709be">
 
   <!-- Optional icon link -->
-  <link rel="icon" href="icon-192.png">
+  <link rel="icon" href="Kipu192.png">
 </head>
 
 <body style="margin:0;padding:0;background:#fff;">
@@ -28,3 +28,4 @@
   </script>
 </body>
 </html>
+
