--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 
   <!-- Optional icon link -->
   <link rel="icon" href="Kipu192.png">
+
+    <script>
+    // Immediately redirect to the real Kipu URL
+    window.location.replace("https://nhwc12842.kipuworks.com");
+  </script>
 </head>
 
 <body style="margin:0;padding:0;background:#fff;">
-  <iframe 
-    src="https://nhwc12842.kipuworks.com"
-    style="border:none;width:100vw;height:100vh;"
-  ></iframe>
-
   <script>
     // Register service worker for PWA installation
     if ('serviceWorker' in navigator) {
@@ -28,4 +28,5 @@
   </script>
 </body>
 </html>
+
 
